Grok changes
************

1.1 (unreleased)
================

- Nothing changed yet.


1.1rc1 (2010-02-25)
===================

* Now using grokcore.content for the base content types : Model,
  Container and OrderedContainer.

* Lifted the dependency on zope.app.authentication and depend on
  zope.password instead.

* Lifted dependencies on deprecate packages zope.app.error and
  zope.app.securitypolicy and zope.app.session.

Beside these changes lot of work has been undertaken to remove as much
dependencies on "older" zope.app.* packages as possible from Grok itself
and from the dependencies of Grok. This work is not complete yet.

1.1a2 (2009-12-22)
==================

* Updated z3c.recipe.compattest's version and used it for a bin/compattest
  that tests grok and all its dependencies.

* Add grok.getApplication() that, similar to grok.getSite() retrieves
  the "nearest" enclosing grok.Application object.

* Use zope.container instead of zope.app.container.

* Use zope.catalog instead of zope.app.catalog.

* Use zope.intid instead of zope.app.intid.

* Use zope.keyreference instead of zope.app.keyreference.

1.1a1 (2009-11-17)
==================

* This release depends on grokcore.view 1.13a1.

* Add ZTK support (currently ZTK 1.0dev).

* Grokdocs now uses ZTK pinned versions.

* The ``grok.permissions()``, that is used in the ``grok.Role`` component now
  accepts references to ``grok.Permission`` class, not just permission ids.
  This behaviour is now symetrical to the ``grok.require()`` directive.

* Added an util function, ``create_application``, to create an
  application and trigger the correct events during the process.

* Grok now provides an application-centric event to complete the
  zope.lifecycle ones. This event, ``ApplicationInitializedEvent``, is
  destined to be trigged after the application has been added to a
  container. At this particular step, the application is considered
  safe for additional content to be created.
